[tool.coverage.run]
branch = true
source = [ "adsp_py_common" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov --cov-report html:'../../coverage/libs/adsp-py-common/html' --cov-report xml:'../../coverage/libs/adsp-py-common/coverage.xml' --html='../../reports/libs/adsp-py-common/unittests/html/index.html' --junitxml='../../reports/libs/adsp-py-common/unittests/junit.xml'"
log_cli = true
log_cli_level = "DEBUG"

[tool.poetry]
name = "adsp-py-common"
version = "1.0.0"
description = "ADSP Python common library"
authors = [ ]
license = 'Apache-2.0'
readme = 'README.md'

  [[tool.poetry.packages]]
  include = "adsp_py_common"

  [tool.poetry.dependencies]
  python = ">=3.9,<3.12"
  cachetools = "^5.3.2"
  types-cachetools = "^5.3.0.7"
  httpx = "^0.25.0"
  more-itertools = "^10.1.0"
  urnparse = "^0.2.1"

    [tool.poetry.dependencies.pyjwt]
    extras = [ "crypto" ]
    version = "^2.6.0"

  [tool.poetry.group.dev.dependencies]
  flake8 = "^6.0.0"
  pytest = "^7.2.2"
  pytest-coverage = "^0.0"
  pytest-html = "^3.2.0"
  black = "^24.3.0"
  tox = "^4.4.7"

[build-system]
requires = ["poetry-core==1.1.0"]
build-backend = "poetry.core.masonry.api"
