[tool.coverage.run]
branch = true
source = [ "adsp_service_flask_sdk" ]

[tool.coverage.report]
exclude_lines = [ "if TYPE_CHECKING:" ]
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov --cov-fail-under=0 --cov-report html:'../../coverage/libs/adsp-service-flask-sdk/html' --cov-report xml:'../../coverage/libs/adsp-service-flask-sdk/coverage.xml' --junitxml='../../reports/libs/adsp-service-flask-sdk/unittests/junit.xml' --html='../../reports/libs/adsp-service-flask-sdk/unittests/html/index.html'"
log_cli = true
log_cli_level = "DEBUG"

[tool.poetry]
name = "adsp-service-flask-sdk"
version = "1.0.0"
description = "ADSP Service SDK for Flask"
authors = [ ]
license = "Apache-2.0"
readme = "README.md"

  [[tool.poetry.packages]]
  include = "adsp_service_flask_sdk"

  [tool.poetry.dependencies]
  python = ">=3.9,<3.12"
  flask = "^3.1.0"

    [tool.poetry.dependencies.adsp-py-common]
    path = "../adsp-py-common"
    develop = true

[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
pytest = "^8.4.0"
pytest-coverage = "^0.0"
pytest-html = "^4.1.1"
black = "^25.1.0"
tox = "^4.26.0"

[build-system]
requires = [ "poetry-core==1.1.0" ]
build-backend = "poetry.core.masonry.api"